--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,91 @@
 // Specific CSS for your home-page
+.body-space {
+  min-height: 500vh;
+  background-image: url("desktop_background.png");
+}
+
+.no-margin {
+  margin: 0;
+}
+
+#header-section {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  // border: 5px solid black
+}
+
+#group-chat-section {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+}
+
+#no-download-section {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+}
+
+#features-section {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+}
+
+#contact-section {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.marketing-message {
+  width: 50%;
+  // border: 5px solid black;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.image-area {
+  flex-grow: 1;
+  // border: 5px solid black;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.marketing-message h1 {
+  font-weight: 700;
+}
+
+.title-line {
+  width: 50px;
+  height: 10px;
+  color: black;
+}
+
+.content-card {
+  margin: 5% 10%;
+  display: flex;
+  background-color: white;
+  padding: 10%;
+  background-color: white;
+  box-shadow: 0 0 25px rgba(40,47,60,.05), 0 20px 25px rgba(40,47,60,.05), 0 3px 4px rgba(40,47,60,.05);
+  border-radius: 5px;
+}
+
+.features-section {
+  display: flex;
+  justify-content: space-around;
+  align-items: top;
+}
+
+.feature-area {
+  width:33%;
+  padding: 10px;
+}
+
+.hidden { display: none; }
