changed some stuff

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,14 +11,14 @@
         </div>
       </div>
       <div class="image-area">
-        <%= image_tag 'demo-app-1' %>
+        <%= image_tag 'demo-app-1.png' %>
       </div>
     </div>
 
     <div id="group-chat-section">
       <div class="content-card">
         <div class="image-area">
-          <%= image_tag 'demo-app-2' %>
+          <%= image_tag 'demo-app-2.png' %>
         </div>
         <div class="marketing-message">
           <div class="content text-center">
@@ -66,7 +66,7 @@
           </div>
         </div>
         <div class="image-area">
-          <%= image_tag 'demo-app-3' %>
+          <%= image_tag 'demo-app-3.png' %>
         </div>
       </div>
     </div>
