background image test

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,7 +1,7 @@
 // Specific CSS for your home-page
 .body-space {
   min-height: 500vh;
-  background-image: url("desktop_background.png");
+  background-image: asset_url("desktop_background.png");
 }
 
 .no-margin {
