made mobile version of single landing page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,70 @@
 <% @title = "Kitty" %>
 
 <div class="body-space">
+
+  <!-- MOBILE -->
+  <div class="hidden-md hidden-lg">
+    <div id="header-section-mobile">
+      <div class="container">
+        <h1 class="no-margin color-primary">Kitty</h1>
+        <h2 class="no-margin">Control group spending, right inside your chats</h2>
+      </div>
+    </div>
+
+    <div class="image-area">
+      <%= image_tag 'demo-app-1.png' %>
+    </div>
+    <div style="height:50px;"></div>
+
+    <div id="groups-section-mobile">
+      <div class="mobile-card text-center">
+        <div class="content text-center">
+          <h4 class="no-margin">Built Into Your Groups</h4>
+          <hr>
+          <p class="no-margin">Messaging apps are the home of groups online. Therefore, we have integrated group spending straight into your group chats. Available now as a Facebook Messenger Extension and in other messaging apps soon.</p>
+        </div>
+      </div>
+      <div class="image-area" style="margin-top:50px;">
+        <%= image_tag 'demo-app-2.png' %>
+      </div>
+    </div>
+
+    <div id="features-section">
+      <div class="content-card">
+        <div class="content text-center">
+          <h2 class="no-margin">Features</h2>
+          <hr>
+          <div class="features-section-mobile text-center">
+              <i class="fa fa-tasks color-primary" style="font-size:90px; margin-top:17.5px;" aria-hidden="true"></i>
+              <h4>Simplifies repayments</h4>
+
+              <i class="fa fa-tachometer color-primary" style="font-size:100px;" aria-hidden="true"></i>
+              <h4>Track your financial situation</h4>
+
+              <i class="fa fa-commenting color-primary" style="font-size:100px;" aria-hidden="true"></i>
+              <h4>Reminds people to pay back</h4>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div id="download-section-mobile">
+      <div class="mobile-card text-center">
+        <div class="content text-center">
+          <h4 class="no-margin">No need to download</h4>
+          <hr>
+          <p class="no-margin">Kitty is a web platform. As it is built into your messaging apps, there is no need to download extra apps or take up space on your device! Just chatting to Kitty on Facebook Messenger will get you started.</p>
+        </div>
+      </div>
+      <div class="image-area" style="margin-top:50px;">
+        <%= image_tag 'demo-app-3.png' %>
+      </div>
+    </div>
+
+  </div>
+
+  <!-- DESKTOP -->
+  <div class="hidden-xs">
     <div id="header-section">
       <div class="marketing-message">
         <div class="content">
@@ -24,7 +88,7 @@
           <div class="content text-center">
             <h2 class="no-margin">Built Into Your Groups</h2>
             <hr>
-            <p class="no-margin">Messaging apps are the home of groups online. Therefore, we have integrated group spending straight into your groups chats. Available now as a Facebook Messenger Extension and in other messaging apps soon.</p>
+            <p class="no-margin">Messaging apps are the home of groups online. Therefore, we have integrated group spending straight into your group chats. Available now as a Facebook Messenger Extension and in other messaging apps soon.</p>
           </div>
         </div>
       </div>
@@ -32,27 +96,27 @@
 
     <div id="features-section">
       <div class="content-card">
-          <div class="content text-center">
-            <h2 class="no-margin">Features</h2>
-            <hr>
-            <div class="features-section">
-              <div class="feature-area">
-                <i class="fa fa-tasks color-primary" style="font-size:90px; margin-top:17.5px;" aria-hidden="true"></i>
-                <h4>Simplifies repayments</h4>
-                <p>Kitty does all the maths so you don't have to. She will then show you the quickest way to pay everyone back.</p>
-              </div>
-              <div class="feature-area">
-                <i class="fa fa-tachometer color-primary" style="font-size:100px;" aria-hidden="true"></i>
-                <h4>Track your financial situation</h4>
-                <p>Provides users a dashboard to keep track of all their spending across groups, their outstanding debts and more.</p>
-              </div>
-              <div class="feature-area">
-                <i class="fa fa-commenting color-primary" style="font-size:100px;" aria-hidden="true"></i>
-                <h4>Reminds people to pay back</h4>
-                <p>As Kitty is built directly into your group chats, it can automatically send messages reminding people to pay you back or updating you on the new situation.</p>
-              </div>
+        <div class="content text-center">
+          <h2 class="no-margin">Features</h2>
+          <hr>
+          <div class="features-section">
+            <div class="feature-area">
+              <i class="fa fa-tasks color-primary" style="font-size:90px; margin-top:17.5px;" aria-hidden="true"></i>
+              <h4>Simplifies repayments</h4>
+              <p>Kitty does all the maths so you don't have to. She will then show you the quickest way to pay everyone back.</p>
+            </div>
+            <div class="feature-area">
+              <i class="fa fa-tachometer color-primary" style="font-size:100px;" aria-hidden="true"></i>
+              <h4>Track your financial situation</h4>
+              <p>Provides users a dashboard to keep track of all their spending across groups, their outstanding debts and more.</p>
+            </div>
+            <div class="feature-area">
+              <i class="fa fa-commenting color-primary" style="font-size:100px;" aria-hidden="true"></i>
+              <h4>Reminds people to pay back</h4>
+              <p>As Kitty is built directly into your group chats, it can automatically send messages reminding people to pay you back or updating you on the new situation.</p>
             </div>
           </div>
+        </div>
       </div>
     </div>
 
@@ -70,31 +134,35 @@
         </div>
       </div>
     </div>
+  </div>
 
-    <div id="contact-section">
+<!-- CONTACT SECTION (MOBILE AND DESKTOP) -->
+  <div id="contact-section">
       <div class="content-card">
-          <div class="content text-center">
-            <h2 class="no-margin">Get in Touch</h2>
-            <hr>
-            <div class="contact-form">
-              <%= simple_form_for @contact, :html => {:class => 'form-horizontal' } do |f| %>
-                <%= f.input :name, :required => true, :label => false, placeholder: "Your Name" %>
-                <%= f.input :email, :required => true, :label => false, placeholder: "Your Email" %>
-                <%= f.input :message, :as => :text, :required => true, :label => false, placeholder: "Your Message"  %>
-                <div class= "hidden">
-                  <%= f.input :nickname, :hint => 'Leave this field blank!' %>
-                </div>
-                <div>
-                  </br>
-                  <%= f.button :submit, 'Send message', :class=> "btn btn-pill btn-primary btn-block" %>
-                </div>
-              <% end %>
+        <div class="content text-center">
+          <h2 class="no-margin">Get in Touch</h2>
+          <hr>
+          <div class="contact-form">
+            <%= simple_form_for @contact, :html => {:class => 'form-horizontal' } do |f| %>
+            <%= f.input :name, :required => true, :label => false, placeholder: "Your Name" %>
+            <%= f.input :email, :required => true, :label => false, placeholder: "Your Email" %>
+            <%= f.input :message, :as => :text, :required => true, :label => false, placeholder: "Your Message"  %>
+            <div class= "hidden">
+              <%= f.input :nickname, :hint => 'Leave this field blank!' %>
             </div>
+            <div>
+            </br>
+            <%= f.button :submit, 'Send message', :class=> "btn btn-pill btn-primary btn-block" %>
           </div>
+          <% end %>
+        </div>
       </div>
     </div>
+
 </div>
 
+
+<!-- Footer Section -->
 <div class="footer-home">
   <footer class="flex-rw">
       <ul class="footer-list-top">
