--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -14,6 +14,14 @@
   display: flex;
   // border: 5px solid black
 }
+#header-section-mobile {
+  height: 60vh;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  // border: 5px solid black
+}
 
 #group-chat-section {
   height: 100vh;
@@ -28,7 +36,7 @@
 }
 
 #features-section {
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
   display: flex;
 }
@@ -77,8 +85,24 @@
   border-radius: 5px;
 }
 
+.mobile-card {
+  margin: 5% 10%;
+  background-color: white;
+  padding: 5%;
+  background-color: white;
+  box-shadow: 0 0 25px rgba(40,47,60,.05), 0 20px 25px rgba(40,47,60,.05), 0 3px 4px rgba(40,47,60,.05);
+  border-radius: 5px;
+}
+
 .features-section {
   display: flex;
+  justify-content: space-around;
+  align-items: top;
+}
+
+.features-section-mobile {
+  display: flex;
+  flex-direction: column;
   justify-content: space-around;
   align-items: top;
 }
