--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -41,6 +41,14 @@
   display: flex;
 }
 
+#features-section-mobile {
+  min-height: 100vh;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
 #contact-section {
   height: 100vh;
   width: 100%;
