added mailchimp form

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -138,8 +138,8 @@
 
 <!-- CONTACT SECTION (MOBILE AND DESKTOP) -->
   <div id="contact-section">
-      <div class="content-card">
-        <%= render 'shared/basic-contact-form' %>
+      <div class="content-card text-center">
+        <%= render 'shared/mailchimp-contact-form' %>
       </div>
     </div>
 
